FTP and SFTP Browser for Mac OS X
http://cyberduck.ch/

Last modified: $Date$
Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser licenced under the GPL for the Mac. 

2.4b2
- [Feature] Allow the selection of files in the browser by typing more than just the first character of the filename
- [Feature] A bookmark in the drawer can be selected by typing its hostname
- [Bugfix] Opening an URL linking to a file opens a browser window
- [Bugfix] Changing the username of a newly created bookmark of a connected server might affect an existing bookmark of the same server but with a different username.
- [Bugfix] Don't write PASS to transcript (FTP)

2.4b1
- [Feature] Synchronization of files
- [Feature] Create new files on server
- [Feature] Support for Novell Netware file listings (FTP)
- [Feature] Growl notification support (see http://growl.info)
- [Feature] Limit number of concurrent connections to a remote host 
- [Feature] Move remote files with copy & paste
- [Feature] Select a file in the browser by typing its first character
- [Feature] Put remote files into the transfer queue with copy & paste
- [Feature] Apply permissions recursively
- [Feature] Option to apply default permissions to transferred files in Preferences
- [Feature] Option to preserve modification date on download in Preferences
- [Feature] Switch encoding per browser with menu or toolbar item
- [Feature] Switch 'Show hidden files' per browser with menu or toolbar item
- [Feature] Transfer Queue with "Aqua" progress indicator
- [Feature] Provide a proxy icon for the connection in the window title bar
- [Feature] The proxy icon in the window title bar can then be dragged to the bookmark drawer or the Finder.
- [Feature] Bookmarks of recently connected hosts are saved in ~/Library/Application Support/Cyberduck/History 
- [Feature] Updated toolbar icons (Thanks to Matt Ball)
- [Feature] Display the number of files in the browser 