@@ -7,8 +7,12 @@ Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser lice
 2.4b2
 - [Feature] Allow the selection of files in the browser by typing more than just the first character of the filename
 - [Feature] A bookmark in the drawer can be selected by typing its hostname
+- [Feature] Preserve the modification date on upload (SFTP)
+- [Feature] Preserve the modification date on upload if the server supports 'CHMOD UTIME' (FTP)
+- [Bugfix] Determine changed files based on modification date when synchronizing
 - [Bugfix] Opening an URL linking to a file opens a browser window
 - [Bugfix] Changing the username of a newly created bookmark of a connected server might affect an existing bookmark of the same server but with a different username.
+- [Bugfix] Logging the response of 'LIST' (FTP)
 - [Bugfix] Don't write PASS to transcript (FTP)
 
 2.4b1
